--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -518,6 +518,32 @@
                                 </div> -->
                             </div>
                         </div>
+                        <div class="tag-div">
+                            <div class="tag-header">
+                                <div class="notice-div">
+                                    <span>태그:</span>
+                                </div>
+                                <input type="search" class="tag-search-input" placeholder="검색">
+                            </div>
+                            <div class="tag-result-div">
+                                <div class="test-div" contenteditable="true">
+                                    
+                                </div>
+                                <!-- <ul>
+                                    <li class="tag-result-li">
+                                        <div class="user-information-div">
+                                            <div class="user-image-div">
+                                                <img class="user-image" src="/static/image/profiles/Jordy.png" alt="프로필">
+                                            </div>
+                                            <div class="user-name-information-div">
+                                                <span class="user-nickname-span">dae._gyeong</span>
+                                                <span class="user-name-span">한대경</span>
+                                            </div>
+                                        </div>
+                                    </li>
+                                </ul> -->
+                            </div>
+                        </div>
                         <div class="content-div visible">
                             <div class="user-information-div">
                                 <div class="user-image-div">
@@ -597,7 +623,7 @@
                                                 <span class="setting-title-span">이 게시물의 좋아요 수 및 조회수 숨기기</span>
                                             </div>
                                             <div class="setting-on-off-div">
-                                                <input class="hide-like-and-view-input on-off-input visible" id="hide-like-and-view-input" type="checkbox" disabled>
+                                                <input class="hide-like-and-view-input on-off-input visible" id="hide-like-and-view-input" type="checkbox">
                                                 <label class="on-off-outer-label" for="hide-like-and-view-input">
                                                     <div class="on-off-div"></div>
                                                 </label>
@@ -611,7 +637,7 @@
                                                 <span class="setting-title-span">댓글 기능 해제</span>
                                             </div>
                                             <div class="setting-on-off-div">
-                                                <input class="comment-option-input on-off-input visible" id="comment-option-input" type="checkbox" disabled>
+                                                <input class="comment-option-input on-off-input visible" id="comment-option-input" type="checkbox">
                                                 <label class="on-off-outer-label" for="comment-option-input">
                                                     <div class="on-off-div"></div>
                                                 </label>
