--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -454,7 +454,7 @@
                     </div>
                 </section>
             </div>
-            <div class="main-modal-div">
+            <div class="main-modal-div visible">
                 <div class="upload-picture-and-video-modal">
                     <div class="modal-header-div">
                         <button class="pre-button hidden" type="button">
@@ -518,7 +518,7 @@
                                 </div> -->
                             </div>
                         </div>
-                        <div class="tag-div">
+                        <div class="tag-div visible">
                             <div class="tag-header">
                                 <div class="notice-div">
                                     <span>태그:</span>
@@ -647,6 +647,23 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="x-mark-div">
+                    <i class="fa-solid fa-x"></i>
+                </div>
+                <div class="remove-notice-modal-outer-div visible">
+                    <div class="remove-notice-modal-div">
+                        <div class="remove-notice-div">
+                            <h1>게시물을 삭제하시겠어요?</h1>
+                            <p>지금 나가면 수정 내용이 저장되지 않습니다.</p>
+                        </div>
+                        <div class="remove-div">
+                            <button class="remove-button" type="button">삭제</button>
+                        </div>
+                        <div class="cancel-div">
+                            <button class="cancel-button" type="button">취소</button>
                         </div>
                     </div>
                 </div>
