--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -27,6 +27,10 @@
                             <input type="text" class="auth-input" placeholder="전화번호, 사용자 이름 또는 이메일">
                             <input type="password" class="auth-input" placeholder="비밀번호">
                         </div>
+                        <div class="save-user-div">
+                            <input type="checkbox" id="save-user-checkbox" class="save-user-checkbox cursor" name="remember-me">
+                            <label class="cursor" for="save-user-checkbox">로그인 유지</label>
+                        </div>
                         <button class="login-button">로그인</button>
                         <div class="line-div">
                             <div class="line"></div>
